[package]
authors = ["d0iasm"]
name = "toybr"
version = "0.1.0"
edition = "2021"
default-run = "toybr"

[features]
cui = ["dep:net_std", "dep:ui_cui"]
gui = []
wasabi = ["dep:libc", "dep:spin", "dep:net_wasabi", "dep:ui_wasabi", "dep:noli"]

[[bin]]
name = "toybr"
path = "main/main.rs"
required-features = ["wasabi"]

[[bin]]
name = "toybr_gui"
path = "main/main_gui.rs"
required-features = ["gui"]

[[bin]]
name = "toybr_cui"
test = false
path = "main/main_cui.rs"
required-features = ["cui"]

#[lib]
#name = "core"
#path = "core/lib.rs"
#crate-type = ["staticlib"]
#required-features = []

[dependencies]
toybr_core = { path = "./core"}

# Dependencies used for CUI browser
net_std = { path = "./net/std", optional = true }
ui_cui = { path = "./ui/cui", optional = true }

# Dependencies used for browser on WasabiOS
libc = { version = "0.2.150", optional = true}
spin = { version = "0.9.8", optional = true}
net_wasabi = { path = "./net/wasabi", optional = true }
ui_wasabi = { path = "./ui/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", optional = true }
