[package]
authors = ["d0iasm"]
name = "saba"
version = "0.1.0"
edition = "2021"
default-run = "saba"

[features]
default = ["wasabi"]
cui = ["dep:net_std", "dep:ui_cui"]
gui = []
wasabi = ["dep:net_wasabi", "dep:ui_wasabi", "dep:noli"]

[[bin]]
name = "httpclient"
path = "main/httpclient_wasabi.rs"
required-features = ["wasabi"]

[[bin]]
name = "saba"
path = "main/saba_wasabi.rs"
required-features = ["wasabi"]

[[bin]]
name = "saba_gui"
path = "main/saba_gui.rs"
required-features = ["gui"]

[[bin]]
name = "saba_cui"
path = "main/saba_cui.rs"
required-features = ["cui"]

[dependencies]
saba_core = { path = "./core"}

# Dependencies used for CUI browser
net_std = { path = "./net/std", optional = true }
ui_cui = { path = "./ui/cui", optional = true }

# Dependencies used for browser on WasabiOS
net_wasabi = { path = "./net/wasabi", optional = true }
ui_wasabi = { path = "./ui/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", optional = true }
#noli = { path = "./../../noli", optional = true }
