[package]
authors = ["d0iasm"]
name = "saba"
version = "0.1.0"
edition = "2021"
default-run = "saba"

[workspace]
members = [ "core", "net/wasabi", "ui/wasabi" ]

[features]
default = ["wasabi"]
cui = ["dep:net_std", "dep:ui_cui"]
gui = []
wasabi = ["dep:net_wasabi", "dep:ui_wasabi", "dep:noli"]

[[bin]]
name = "saba"
path = "src/saba_wasabi.rs"
required-features = ["wasabi"]

[[bin]]
name = "saba_gui"
path = "src/saba_gui.rs"
required-features = ["gui"]

[[bin]]
name = "saba_cui"
path = "src/saba_cui.rs"
required-features = ["cui"]

[dependencies]
saba_core = { path = "./core"}

# Dependencies used for CUI browser
net_std = { path = "./net/std", optional = true }
ui_cui = { path = "./ui/cui", optional = true }

# Dependencies used for browser on WasabiOS
net_wasabi = { path = "./net/wasabi", optional = true }
ui_wasabi = { path = "./ui/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
