[package]
authors = ["d0iasm"]
name = "toybr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "toybr"
test = false
path = "src/main.rs"

[dependencies]
renderer = { path = "./renderer"}
ui = { path = "./ui"}
net = { path = "./net"}
url = { path = "./url"}

[workspace]
members = ["renderer", "ui", "net", "url"]
