[package]
authors = ["d0iasm"]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.2"
lazy_static = "1.4"
skia-bindings = "0.58.0"
skia-safe = "0.58.0"
glutin = "0.30.6"
glutin-winit = { version = "0.3"}
winit = { version = "0.28.1"}
raw-window-handle = { version = "0.5.0" }
gl-rs = { package = "gl", version = "0.14.0" }
